[package]
name = "tlb_winmd_gen"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
crossterm = "0.29.0"
ratatui = "0.29.0"
thiserror = "2.0.17"
regex = "1.10.4"
windows = {version ="0.62.2", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant"
]}
windows-core = "0.62.2"
chmlib = {path = "crates/chmlib/chmlib"}
textwrap = "0.16.2"
